--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"  />
 </head>
 
 <body>
@@ -227,7 +228,7 @@
     <!-- slider-end -->
      <!-- whats app -->
      <div class="whats-app">
-        <a href="https://api.whatsapp.com/send?phone=" class="whtas-app-icon" style="font-size: 30px; color: #25d366;"><i class="fa-brands fa-whatsapp" style="color: #25d366;"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=" class="whtas-app-icon" ><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <!-- whats app -->
     <!-- courses start -->
@@ -1146,7 +1147,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="footer-copyright text-center">
-                                    <span>Copyright © 2018. All rights reserved</span>
+                                    <p>@2024 Royalinstitute . All Rights Reserved. Designed and Developed by <a href="https://atbott.co">Atbott Solutions</a></p>
                                 </div>
                             </div>
                         </div>
